# llama_fast

./: .gitmodules  README.md  a.out  profile.cu  profile.py  profile2.cu  profile_base.py  profile_rms_norm.py  pytorchtest.py  rotary.cu
Scripts/: SetupEnvironment.sh
Source/: CMakeLists.txt
Source/DataStructures/: Array.h
Source/UnitTests/: CMakeLists.txt  Main.cu
Source/UnitTests/Operations/: RMSNorm_tests.cu
Source/Utilities/: CMakeLists.txt
Source/Utilities/ErrorHandling/: HandleUnsuccessfulCUDACall.cu  HandleUnsuccessfulCUDACall.h
kernels/: rmsnorm_forward.cu
llama3_file/: LICENSE  README.md  USE_POLICY  profile_rms_norm.py
llama3_file/llama/: __init__.py  generation.py  model.py
